--- a/i/in/ins/insidehoops.com.html
+++ b/i/in/ins/insidehoops.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the insidehoops.com privacy policy that was archived on 2005-12-29.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051229215908id_/http%3A//www.insidehoops.com/privacy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the insidehoops.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615045902id_/http%3A//www.insidehoops.com/privacy.shtml) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 <title>InsideHoops.com - Privacy Policy</title>
@@ -28,45 +28,45 @@
 <tbody><tr> 
 <td width="162" valign="top"> 
 <table width="150" bgcolor="#000000" border="0" cellspacing="1" cellpadding="0"><tbody><tr><td>
-<table width="100%" border="0" cellspacing="0" cellpadding="0" bgcolor="#000066" class="normal" bordercolor="#000000">
+<table width="100%" border="0" cellspacing="0" cellpadding="0" bgcolor="#14223D" class="normal" bordercolor="#000000">
 <tbody><tr> 
-<td class="menu2" bgcolor="#cc3300" colspan="2"><b><font color="white">MAIN SECTIONS</font></b></td>
+<td class="menu" bgcolor="#FFC77F" colspan="2"><b><font color="black">MAIN SECTIONS</font></b></td>
 </tr>
 <tr> 
-<td bgcolor="#000099" colspan="2"><a class="menu" href="http://www.insidehoops.com">InsideHoops.com</a></td>
+<td bgcolor="#003EBA" colspan="2"><a class="menu" href="http://www.insidehoops.com">InsideHoops.com</a></td>
 </tr>
 <tr> 
-<td bgcolor="#000099" colspan="2"><a class="menu" href="http://www.insidehoops.com/nba.shtml">NBA Basketball</a></td>
+<td bgcolor="#003EBA" colspan="2"><a class="menu" href="http://www.insidehoops.com/nba.shtml">NBA Basketball</a></td>
 </tr>
 <tr> 
-<td bgcolor="#000099"><a class="menu" href="/ncaa">College</a></td>
-<td bgcolor="#000099"><a class="menu" href="/high-school.shtml">High School</a></td>
+<td bgcolor="#003EBA"><a class="menu" href="/ncaa">College</a></td>
+<td bgcolor="#003EBA"><a class="menu" href="/high-school.shtml">High School</a></td>
 </tr>
 
 <tr> 
-<td bgcolor="#000099"><a class="menu" href="/streetball.shtml">Streetball</a></td>
-<td bgcolor="#000099"><a class="menu" href="/nyc-basketball.shtml">NYC</a></td>
+<td bgcolor="#003EBA"><a class="menu" href="/streetball.shtml">Streetball</a></td>
+<td bgcolor="#003EBA"><a class="menu" href="/nyc-basketball.shtml">NYC</a></td>
 </tr>
 <tr> 
-<td bgcolor="#000099"><a class="menu" href="/nbdl.shtml">NBDL</a></td>
-<td bgcolor="#000099"><a class="menu" href="/rucker">Rucker Park</a></td>
+<td bgcolor="#003EBA"><a class="menu" href="/nbdl.shtml">NBDL</a></td>
+<td bgcolor="#003EBA"><a class="menu" href="/rucker">Rucker Park</a></td>
 </tr>
 <tr> 
-<td bgcolor="#000099"><a class="menu" href="/wnba">WNBA</a> </td>
-<td bgcolor="#000099"><a class="menu" href="/#leagues">More L's</a></td>
+<td bgcolor="#003EBA"><a class="menu" href="/wnba">WNBA</a> </td>
+<td bgcolor="#003EBA"><a class="menu" href="/#leagues">More L's</a></td>
 </tr>
 <tr> 
-<td class="menu2" bgcolor="#cc3300" colspan="2"><b><font color="white">EMAIL &amp; FORUMS</font></b></td>
+<td class="menu" bgcolor="#FFC77F" colspan="2"><b><font color="black">EMAIL &amp; FORUMS</font></b></td>
 </tr>
 <tr> 
 <td><a class="menu" href="http://www.insidehoops.net">Free Email</a></td>
 <td><a class="menu" href="/free-website.shtml">Free Website</a></td>
 </tr>
 <tr> 
-<td colspan="2"><a class="menu" href="http://p089.ezboard.com/binsidehoops">Message Board</a> </td>
+<td colspan="2"><a class="menu" href="http://www.insidehoops.com/forum/">Message Board</a> </td>
 </tr>
 <tr> 
-<td class="menu2" bgcolor="#666666" colspan="2"><b><font color="white">NBA NEWS &amp; RUMORS</font></b></td>
+<td class="menu" bgcolor="#FFC77F" colspan="2"><b><font color="black">NBA NEWS &amp; RUMORS</font></b></td>
 </tr>
 <tr> 
 <td><a class="menu" href="/nba_rumors.shtml">NBA rumors</a></td>
@@ -77,11 +77,11 @@
 <td><a class="menu" href="/nbamedia.shtml">Media Links</a></td>
 </tr>
 <tr> 
-<td class="menu" bgcolor="#666666" colspan="2"><b><font color="white">SCORES &amp; STATS</font></b></td>
+<td class="menu" bgcolor="#FFC77F" colspan="2"><b><font color="black">SCORES &amp; STATS</font></b></td>
 </tr>
 <tr> 
-<td><a class="menu" href="/scores.php?LeagueID=nba">Score</a>/<a class="menu" href="/box-scores.shtml">Box</a></td>
-<td><a class="menu" href="/schedule.shtml">Sched</a>/<a class="menu" href="/hoopstv.shtml">TV</a></td>
+<td><a class="menu" href="/box-scores.shtml">Box Scores</a></td>
+<td><a class="menu" href="/schedule.shtml">Sched</a> / <a class="menu" href="/hoopstv.shtml">TV</a></td>
 </tr>
 <tr> 
 <td><a class="menu" href="/standings.shtml">Standings</a></td>
@@ -97,10 +97,10 @@
 </tr>
 <tr> 
 <td><a class="menu" href="/transactions.shtml">Trans</a></td>
-<td>    </td>
+<td><a class="menu" href="/nba-throwback-jerseys.shtml">Mitchell&amp;Ness</a></td>
 </tr>
 <tr> 
-<td class="menu2" bgcolor="#666666" colspan="2"><b><font color="white">NBA FEATURES</font></b></td>
+<td class="menu" bgcolor="#FFC77F" colspan="2"><b><font color="black">NBA FEATURES</font></b></td>
 </tr>
 
 
@@ -141,14 +141,10 @@
 </tr>
 
 
-<tr> 
-<td colspan="2"><a class="menu" href="http://www.insidehoops.com/nba-throwback-jerseys.shtml">Mitchell &amp; Ness</a></td>
-</tr>
-
 
 
 <tr> 
-<td class="menu2" bgcolor="#666666" colspan="2"><b><font color="white">BASKETBALL SPECIAL</font></b></td>
+<td class="menu" bgcolor="#FFC77F" colspan="2"><b><font color="black">BASKETBALL SPECIAL</font></b></td>
 </tr>
 
 <tr> 
@@ -158,15 +154,10 @@
 
 <tr> 
 <td><a class="menu" href="/business.shtml">Business</a></td>
-<td><a class="menu" href="/ircchat">Live Chat</a></td>
-</tr>
-<tr> 
-<td class="menu2" bgcolor="#666666" colspan="2"><b><a name="leagues"><font color="white">MORE LEAGUES</font></a></b></td>
-</tr>
-
-<tr> 
 <td><a class="menu" href="/gym">Playing Tips</a></td>
-<td><a class="menu" href="/summer-basketball-leagues.shtml">Summer</a></td>
+</tr>
+<tr> 
+<td class="menu" bgcolor="#FFC77F" colspan="2"><b><a name="leagues"><font color="black">MORE LEAGUES</font></a></b></td>
 </tr>
 
 <tr> 
@@ -176,99 +167,42 @@
 
 <tr> 
 <td><a class="menu" href="/international.shtml">World</a></td>
-<td><a class="menu" href="/slamball.shtml">Slamball</a></td>
+<td><a class="menu" href="/summer-basketball-leagues.shtml">Summer</a></td>
 </tr>
 <tr> 
 <td><a class="menu" href="/cba.shtml">CBA</a></td>
 <td><a class="menu" href="/usbl.shtml">USBL</a></td>
 </tr>
 <tr> 
-<td bgcolor="#000099" colspan="2" align="center">
+<td bgcolor="#000000" colspan="2" align="center">
 
 
-
-
-
-
-
-<!-- VC active -->
+<!-- BEGIN RICH-MEDIA NETWORK CODE -->
 <script language="JavaScript">
-<!--
-// ValueParameters
-ValueHost = "hs0269376";
-ValueLoaded = false;
-ValueID = "pagebuster";
-ValueVersion = "1.2";
-ValueBannerType = "std";
-var ValueWidths_Heights = new Array("120x600");
-
-ValueNoText = 1;
-
-//-->
-</script>
-<script language="Javascript" src="http://oz.valueclick.com/jsmaster"></script>
-<script language="JavaScript">
-<!--
-if (ValueLoaded) ValueShowAd();
-//-->
-</script>
-
-
-<noscript>
-
-<A HREF="http://oz.valueclick.com/redirect?host=hs0269376&t=std&b=indexpage&noscript=1&v=0;msizes=120x600" TARGET="_top"><IMG BORDER="0" WIDTH="120" HEIGHT="600" ALT="Click here to visit our sponsor"
-SRC="http://oz.valueclick.com/cycle?host=hs0269376&t=std&b=indexpage&noscript=1;msizes=120x600"></A>
-
+rnum=Math.round(Math.random() * 100000); ts=String.fromCharCode(60);
+if (window.self != window.top) { nf='' } else { nf='NF/' };
+document.write(ts+'script src="http://www.burstnet.com/cgi-bin/ads/sk7559a.cgi/v=2.1S/sz=120x600A|160x600A/'+rnum+'/'+nf+'RETURN-CODE/JS/">'+ts+'/script>');
+</script><script src="http://www.burstnet.com/cgi-bin/ads/sk7559a.cgi/v=2.1S/sz=120x600A|160x600A/47278/NF/RETURN-CODE/JS/"></script><noscript><a href="http://www.burstnet.com/ads/sk7559a-map.cgi/ns/v=2.1S/sz=120x600A|160x600A/" target="_top">
+<img src="http://www.burstnet.com/cgi-bin/ads/sk7559a.cgi/ns/v=2.1S/sz=120x600A|160x600A/" border="0" alt="Click Here"></a>
 </noscript>
-<!-- vc active -->
-
-
-
+<!-- END BURST CODE -->
 
 <br><br>
 
 
 
-<!-- VC active -->
-<script language="JavaScript">
-<!--
-// ValueParameters
-ValueHost = "hs0269376";
-ValueLoaded = false;
-ValueID = "pagebuster";
-ValueVersion = "1.2";
-ValueBannerType = "std";
-var ValueWidths_Heights = new Array("120x600");
-
-ValueNoText = 1;
-
+<!-- TF 160x600 JScript VAR code -->
+<center><script language="javascript"><!--
+document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.ad?site=InsideHoopscom&adSpace=ROS&size=160x600&type=var&requestID='+((new Date()).getTime() % 2147483648) + Math.random()+'"></scr'+'ipt>');
 //-->
-</script>
-<script language="Javascript" src="http://oz.valueclick.com/jsmaster"></script>
-<script language="JavaScript">
-<!--
-if (ValueLoaded) ValueShowAd();
-//-->
-</script>
-
-
+</script><script language="javascript" src="http://a.tribalfusion.com/j.ad?site=InsideHoopscom&amp;adSpace=ROS&amp;size=160x600&amp;type=var&amp;requestID=20751475060.6734836309666956"></script>
 <noscript>
-
-<A HREF="http://oz.valueclick.com/redirect?host=hs0269376&t=std&b=indexpage&noscript=1&v=0;msizes=120x600" TARGET="_top"><IMG BORDER="0" WIDTH="120" HEIGHT="600" ALT="Click here to visit our sponsor"
-SRC="http://oz.valueclick.com/cycle?host=hs0269376&t=std&b=indexpage&noscript=1;msizes=120x600"></A>
-
+   <a href="http://a.tribalfusion.com/i.click?site=InsideHoopscom&adSpace=ROS&size=160x600&requestID=1970228626" target=_blank>
+   <img src="http://a.tribalfusion.com/i.ad?site=InsideHoopscom&adSpace=ROS&size=160x600&requestID=1970228626" 
+                  width=160 height=600 border=0 alt="Click Here"></a>
 </noscript>
-<!-- vc active -->
-
-
-
-
-<br><br>
-
-
-
-
-
+</center>
+<!-- TF 160x600 JScript VAR code -->
 
 
 
@@ -290,37 +224,17 @@ SRC="http://oz.valueclick.com/cycle?host=hs0269376&t=std&b=indexpage&noscript=1;
 <td valign="top"> 
 <hr size="1" color="black">
 <center>
-<!-- VC active -->
+<!-- BEGIN RICH-MEDIA NETWORK CODE -->
 <script language="JavaScript">
-<!--
-// ValueParameters
-ValueHost = "hs0269376";
-ValueLoaded = false;
-ValueID = "pagebuster";
-ValueVersion = "1.2";
-ValueBannerType = "std";
-var ValueWidths_Heights = new Array("468x60");
+rnum=Math.round(Math.random() * 100000); ts=String.fromCharCode(60);
+if (window.self != window.top) { nf='' } else { nf='NF/' };
 
-ValueNoText = 1;
+document.write(ts+'script src="http://www.burstnet.com/cgi-bin/ads/ad7559a.cgi/v=2.1S/sz=468x60A/'+rnum+'/'+nf+'RETURN-CODE/JS/">'+ts+'/script>');
 
-//-->
-</script>
-<script language="Javascript" src="http://oz.valueclick.com/jsmaster"></script>
-<script language="JavaScript">
-<!--
-if (ValueLoaded) ValueShowAd();
-//-->
-</script>
-
-
-<noscript>
-
-<A HREF="http://oz.valueclick.com/redirect?host=hs0269376&t=std&b=indexpage&noscript=1&v=0;msizes=468x60" TARGET="_top"><IMG BORDER="0" WIDTH="468" HEIGHT="60" ALT="Click here to visit our sponsor"
-SRC="http://oz.valueclick.com/cycle?host=hs0269376&t=std&b=indexpage&noscript=1;msizes=468x60"></A>
-
+</script><script src="http://www.burstnet.com/cgi-bin/ads/ad7559a.cgi/v=2.1S/sz=468x60A/73056/NF/RETURN-CODE/JS/"></script><noscript><a href="http://www.burstnet.com/ads/ad7559a-map.cgi/ns/v=2.1S/sz=468x60A/" target="_top">
+<img src="http://www.burstnet.com/cgi-bin/ads/ad7559a.cgi/ns/v=2.1S/sz=468x60A/" border="0" alt="Click Here"></a>
 </noscript>
-<!-- vc active -->
-
+<!-- END BURST CODE -->
 
 </center>
 <hr size="1" color="black">
@@ -338,106 +252,50 @@ SRC="http://oz.valueclick.com/cycle?host=hs0269376&t=std&b=indexpage&noscript=1;
 <tbody><tr> 
 <td valign="top"> 
 <p align="center"> 
-<table border="0" bordercolor="#000000" bgcolor="#000099" cellspacing="3" cellpadding="0" align="right">
-<tbody><tr>
-<td valign="top">
+<table bgcolor="#ffffff" border="0" cellspacing="1" cellpadding="0"><tbody><tr><td>
+<table width="100%" border="0" cellspacing="0" cellpadding="0" class="normal" bordercolor="#ffffff" bgcolor="#ffffff">
+<tbody><tr> 
+<td>
+
 <center>
 
 
-
-<!-- VC active -->
-<script language="JavaScript">
-<!--
-// ValueParameters
-ValueHost = "hs0269376";
-ValueLoaded = false;
-ValueID = "pagebuster";
-ValueVersion = "1.2";
-ValueBannerType = "std";
-var ValueWidths_Heights = new Array("160x600");
-
-ValueNoText = 1;
-
-//-->
+<script type="text/javascript"><!--
+google_ad_client = "pub-2183605478677227";
+google_ad_width = 160;
+google_ad_height = 600;
+google_ad_format = "160x600_as";
+google_ad_type = "text_image";
+google_ad_channel ="";
+google_color_border = "FFFFFF";
+google_color_bg = "FFFFFF";
+google_color_link = "003EBA";
+google_color_url = "14223D";
+google_color_text = "000000";
+//--></script>
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 </script>
-<script language="Javascript" src="http://oz.valueclick.com/jsmaster"></script>
-<script language="JavaScript">
-<!--
-if (ValueLoaded) ValueShowAd();
-//-->
-</script>
-
-
-<noscript>
-
-<A HREF="http://oz.valueclick.com/redirect?host=hs0269376&t=std&b=indexpage&noscript=1&v=0;msizes=160x600" TARGET="_top"><IMG BORDER="0" WIDTH="160" HEIGHT="600" ALT="Click here to visit our sponsor"
-SRC="http://oz.valueclick.com/cycle?host=hs0269376&t=std&b=indexpage&noscript=1;msizes=160x600"></A>
-
-</noscript>
-<!-- vc active -->
-
-
-
 
 
 <br><br>
 
+<!-- FASTCLICK.COM 120x600 and 160x600 SkyScraper CODE for insidehoops.com -->
+<script language="javascript" src="http://media.fastclick.net/w/get.media?sid=3067&amp;m=3&amp;tp=7&amp;d=j&amp;t=n"></script>
+<noscript><a href="http://media.fastclick.net/w/click.here?sid=3067&m=3&c=1" target="_blank">
+<img src="http://media.fastclick.net/w/get.media?sid=3067&m=3&tp=7&d=s&c=1"
+width=160 height=600 border=1></a></noscript>
+<!-- FASTCLICK.COM 120x600 and 160x600 SkyScraper CODE for insidehoops.com -->
 
 
 
-
-
-
-
-
-<!-- VC active -->
-<script language="JavaScript">
-<!--
-// ValueParameters
-ValueHost = "hs0269376";
-ValueLoaded = false;
-ValueID = "pagebuster";
-ValueVersion = "1.2";
-ValueBannerType = "std";
-var ValueWidths_Heights = new Array("160x600");
-
-ValueNoText = 1;
-
-//-->
-</script>
-<script language="Javascript" src="http://oz.valueclick.com/jsmaster"></script>
-<script language="JavaScript">
-<!--
-if (ValueLoaded) ValueShowAd();
-//-->
-</script>
-
-
-<noscript>
-
-<A HREF="http://oz.valueclick.com/redirect?host=hs0269376&t=std&b=indexpage&noscript=1&v=0;msizes=160x600" TARGET="_top"><IMG BORDER="0" WIDTH="160" HEIGHT="600" ALT="Click here to visit our sponsor"
-SRC="http://oz.valueclick.com/cycle?host=hs0269376&t=std&b=indexpage&noscript=1;msizes=160x600"></A>
-
-</noscript>
-<!-- vc active -->
-
-
-
-
-
-
-
-
-<br>
 
 
 </center>
+
 </td>
 </tr>
 </tbody></table>
-<br>
-
-
+</td></tr></tbody></table>
 
 <br>
 </p>
@@ -506,12 +364,12 @@ doc.cookie='he=llo; path=/;';} // -->
 
 
 
+
+
 <div>
 <script src="http://www.burstnet.com/cgi-bin/ads/ad7559a.cgi/sz=0X0MN/v=1.1Y/RANDOM_NUMBER/RETURN-CODE/JS/">
 </script>
 </div>
-
-
 
 
 
@@ -521,36 +379,16 @@ doc.cookie='he=llo; path=/;';} // -->
 <center>
 
 
-<!-- VC active -->
+<!--AdRevolver code begin-->
 <script language="JavaScript">
 <!--
-// ValueParameters
-ValueHost = "hs0269376";
-ValueLoaded = false;
-ValueID = "pagebuster";
-ValueVersion = "1.2";
-ValueBannerType = "std";
-var ValueWidths_Heights = new Array("468x60");
-
-ValueNoText = 1;
-
+var rnd = Math.round(Math.random()*10000000);
+document.writeln('<IFRAME src="http://media.adrevolver.com/adrevolver/banner?place=4370&cpy='+rnd+'" width=728 height=90 scrolling=no allowtransparency=true frameborder=0 marginheight=0 marginwidth=0></IFRAME>\n');
 //-->
-</script>
-<script language="Javascript" src="http://oz.valueclick.com/jsmaster"></script>
-<script language="JavaScript">
-<!--
-if (ValueLoaded) ValueShowAd();
-//-->
-</script>
+</script><iframe src="http://media.adrevolver.com/adrevolver/banner?place=4370&amp;cpy=5445073" width="728" height="90" scrolling="no" allowtransparency="true" frameborder="0" marginheight="0" marginwidth="0"></iframe>
 
 
-<noscript>
-
-<A HREF="http://oz.valueclick.com/redirect?host=hs0269376&t=std&b=indexpage&noscript=1&v=0;msizes=468x60" TARGET="_top"><IMG BORDER="0" WIDTH="468" HEIGHT="60" ALT="Click here to visit our sponsor"
-SRC="http://oz.valueclick.com/cycle?host=hs0269376&t=std&b=indexpage&noscript=1;msizes=468x60"></A>
-
-</noscript>
-<!-- vc active -->
+<!--AdRevolver code end-->
 
 </center>
 
@@ -594,7 +432,7 @@ with Inside Hoops</font></a> </span></div>
 <tbody><tr> 
 
 <td bgcolor="#FFFFFF"><span class="normal"><center><font color="#000000">All 
-content copyright © 1999-2005, InsideHoops.com. All rights reserved. 
+content copyright © 1999-2006, InsideHoops.com. All rights reserved. 
 </font><a href="http://www.insidehoops.com/privacy.shtml"><font color="#000033">Privacy 
 Policy</font></a>. <a href="http://www.insidehoops.com/termsofuse.shtml"><font color="#000033">Terms of Use</font></a>. </center></span></td>
 </tr>
