--- a/d/do/dow/download-free-games.com.html
+++ b/d/do/dow/download-free-games.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the download-free-games.com privacy policy that was archived on 2005-12-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051214132249id_/http%3A//www.download-free-games.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the download-free-games.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615051804id_/http%3A//www.download-free-games.com/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>Privacy Policy for Download Free Games</title>
@@ -40,32 +40,34 @@
 <tbody><tr>
 <td width="100%" valign="top"><br><br>
 <table align="center" width="500" bgcolor="blue"><tbody><tr><td>
-<table align="center" width="498" bgcolor="white" cellpadding="5"><tbody><tr><td><br><h2 align="center">Privacy Policy</h2><p class="small">Download-Free-Games.com is a web property of its parent company, Alpha Internet Consulting LLC, a Washington State Corporation.<br><br>
+<table align="center" width="498" bgcolor="white" cellpadding="5"><tbody><tr><td><br><h2 align="center">Privacy Policy</h2><p class="small">Download Free Games is a web property of its parent company, Alpha Internet Consulting LLC, a Washington State Corporation.<br><br>
 
 The postal address for this website is: <br>
 Download Free Games<br>
 613 S. Ivory St<br>
 Spokane, WA 99202<br><br>
 
-We can be reached via e-mail at games@download-free-games.com
+We can be reached via e-mail at games at download-free-games.com
 
-</p><p align="left" class="small"><b>Emails</b>
+</p><p align="left" class="small"><b>Personally Identifiable Information</b>
+</p><p align="left" class="small">
+Download Free Games collects no personally identifiable information unless you give it to us when ordering a game or signing up for an email newsletter.  No personal information given to us is used for any purpose other than what is stated - to send an email from us related to our game club newsletters or to help you with your ordering information.  We do not sell, rent, or give your information to any other company for any marketing purposes.
+</p><p align="left" class="small">
+If you do not want to receive e-mail from us in the future, please let us know by sending us e-mail at the above address or if you are a subscriber to our Free Game Alert Service, you may follow the directions on the bottom of any of our Alerts and unsubscribe.  
 
-</p><p align="left" class="small">Email subscribers to our newsletters and game clubs will never have their email addresses given away, sold, or will be spammed in any way.  All subscribers always have an option to unsubscribe at any time.  All newsletters are double opt-in, meaning subscribers must confirm their desire to be on the list by clicking a link in an email sent to their sign up address.  This is done to protect all email addresses from being mistakenly or fraudulently added to our list by 3rd parties.
 </p><p align="left" class="small"><b>Site Visitors</b>
 
 </p><p align="left" class="small">
-For each visitor to our Web page, our Web server automatically recognizes only the consumer's domain name and IP address, but not the e-mail address (where possible).<br><br>
-
-We only automatically the domain name, but not the e-mail address of visitors to our Web page. Email addresses are collected if visitors double opt-in to our Free Game Alert Service.  Email addresses are then only used by Download Free Games and not sold, rented, given, or shown to any other company for any use whatsoever.  Our use of double opt-in email addresses is to notify visitors of new games added to the site.<br><br>
-
-The information we collect is used to improve the content of our Web page, not shared with other organizations for commercial purposes.
+For each visitor to our Web page, our Web server automatically recognizes only the consumer's domain name and IP address, but not the e-mail address (where possible). Email addresses are collected if visitors double opt-in to our Game Club services.  Email addresses are then only used by Download Free Games and not sold, rented, given, or shown to any other company for any use whatsoever.  Our use of double opt-in email addresses is to notify visitors of new games added to the site, send tips, or any information related to Download Free Games' products.
 </p><p align="left" class="small"><b>Cookies</b>
 
 </p><p align="left" class="small">
-Cookies are used on many download links to track referrals from this site.  All full version purchases made from these downloads are then credited to Download Free Games from software developer partners on a revenue sharing basis.<br><br>
+Cookies are used on many download links to track referrals from this site.  All full version purchases made from these downloads are then credited to Download Free Games from software developer partners on a revenue sharing basis. At this time, Download Free Games does not set any cookies itself.<br><br>
 
-If you do not want to receive e-mail from us in the future, please let us know by sending us e-mail at the above address or if you are a subscriber to our Free Game Alert Service, you may follow the directions on the bottom of any of our Alerts and unsubscribe.  </p><p align="left" class="small"><b>Ad Servers</b>
+
+
+
+</p><p align="left" class="small"><b>Ad Servers</b>
 
 </p><p align="left" class="small">
 
@@ -89,9 +91,9 @@ If you feel that this site is not following its stated information policy, you m
 <a href="http://www.download-free-games.com/puzzle_game_download/zuma.htm">Zuma</a> - 
 <a href="http://www.download-free-games.com/word_game_download/bookworm.htm">Bookworm</a> - 
 <a href="http://www.download-free-games.com/puzzle_game_download/bejeweled2.htm">Bejeweled 2</a> - 
-<a href="http://www.download-free-games.com/puzzle_game_download/tumblebugs.htm">Tumblebugs</a> - 
+<a href="http://www.download-free-games.com/arcade_game_download/diner_dash2.htm">Diner Dash 2</a> - 
 <a href="http://www.download-free-games.com/puzzle_game_download/big_kahuna_reef.htm">Big Kahuna Reef</a> -
-<a href="http://www.download-free-games.com/arcade_game_download/insaniquarium_deluxe.htm">Insaniquarium</a> - 
+<a href="http://www.download-free-games.com/puzzle_game_download/mystery_case_files.htm">Mystery Case Files</a> - 
 <a href="http://www.download-free-games.com/arcade_game_download/feeding_frenzy.htm">Feeding Frenzy</a>
 
 </p><p class="small" align="center"><b>Reviews:</b> &nbsp; <a href="http://www.download-free-games.com/reviews/yahoo_games.htm">Yahoo Games</a> - <a href="http://www.download-free-games.com/reviews/popcap_games.htm">PopCap Games</a> - <a href="http://www.download-free-games.com/reviews/msn_gaming_zone.htm">MSN Gaming Zone</a> - <a href="http://www.download-free-games.com/reviews/pogo_games.htm">Pogo Games</a> - <a href="http://www.download-free-games.com/reviews/miniclip_games.htm">Miniclip Games</a> - <a href="http://www.download-free-games.com/reviews/gamehouse_games.htm">Gamehouse</a><br>
@@ -105,9 +107,9 @@ If you feel that this site is not following its stated information policy, you m
 
 <br><a href="http://www.download-free-games.com/simulation/">Simulation Games</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="http://www.download-free-games.com/kids_games_download/">Kids Games</a>&nbsp;&nbsp;|&nbsp;<a href="http://www.download-free-games.com/chess_game_download/">Chess Games</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="http://www.download-free-games.com/risk_game_download/">Risk Games</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="http://www.download-free-games.com/board_game_download/">Board Games</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="http://www.download-free-games.com/word_game_download/">Word Games</a>
 
-</p><p class="smallest" align="center"><a href="http://www.download-free-games.com">Free Games</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="http://www.download-free-games.com/about_us.htm">About Us</a>&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="http://www.download-free-games.com/compliments.htm">Sites Recommending DFG</a>&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="http://www.download-free-games.com/reviews/index.htm">Site Reviews</a>  &nbsp;|&nbsp;&nbsp;<a href="http://www.download-free-games.com/contact.htm">Contact</a>&nbsp;&nbsp; |&nbsp;&nbsp; <a href="http://www.download-free-games.com/privacy.htm">Privacy</a> |&nbsp;&nbsp; <a href="http://www.download-free-games.com/advertising.htm" rel="nofollow">Advertising</a>&nbsp;&nbsp; |&nbsp;&nbsp;<a href="http://www.download-free-games.com/terms.htm" rel="nofollow">Terms of Use</a><br><a href="http://www.download-free-games.com/freeware.htm">Freeware Games</a>&nbsp;&nbsp;  &nbsp;&nbsp;<a href="http://www.download-free-games.com/retired_games.htm">Retired Games</a>&nbsp;&nbsp;  &nbsp;&nbsp;<a href="http://www.download-free-games.com/link_to_us.htm" rel="nofollow">Webmasters</a>
+</p><p class="smallest" align="center"><a href="http://www.download-free-games.com">Free Games</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="http://www.download-free-games.com/about_us.htm">About Us</a>&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="http://www.download-free-games.com/compliments.htm">Sites Recommending DFG</a>&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="http://www.download-free-games.com/reviews/index.htm">Site Reviews</a>  &nbsp;|&nbsp;&nbsp;<a href="http://www.download-free-games.com/contact.htm">Contact</a>&nbsp;&nbsp; |&nbsp;&nbsp; <a href="http://www.download-free-games.com/privacy.htm">Privacy</a> |&nbsp;&nbsp; <a href="http://www.download-free-games.com/advertising.htm" rel="nofollow">Advertising</a>&nbsp;&nbsp; |&nbsp;&nbsp;<a href="http://www.download-free-games.com/terms.htm" rel="nofollow">Terms of Use</a><br><a href="http://www.download-free-games.com/store/">DFG Store</a>&nbsp;&nbsp;  &nbsp;&nbsp;<a href="http://www.download-free-games.com/freeware.htm">Freeware Games</a>&nbsp;&nbsp;  &nbsp;&nbsp;<a href="http://www.download-free-games.com/retired_games.htm">Retired Games</a>&nbsp;&nbsp;  &nbsp;&nbsp;<a href="http://www.download-free-games.com/link_to_us.htm" rel="nofollow">Webmasters</a>
 
-&nbsp;&nbsp;&nbsp; Site Sponsors: &nbsp; <a href="http://www.downloadfreemacgames.com">Mac Games</a><br><br>Copyright 2005 Download Free Games (TM)<br>&nbsp;&nbsp; </p>
+&nbsp;&nbsp;&nbsp; Site Sponsors: &nbsp; <a href="http://www.downloadfreemacgames.com">Mac Games</a><br><br>Copyright 2006 Download Free Games (TM)<br>&nbsp;&nbsp; </p>
 
 
 
