--- a/v/vi/vir/virtualpbx.com.html
+++ b/v/vi/vir/virtualpbx.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the virtualpbx.com privacy policy that was archived on 2005-12-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051230061818id_/http%3A//www.virtualpbx.com/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the virtualpbx.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615052109id_/http%3A//virtualpbx.com/privacy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
     <title>Privacy For a Wireless Business Phone System, Wireless PBX, and 1 800 Phone Numbers</title>
@@ -17,17 +17,17 @@
 <!-- + HEADER CONTAINER -->
 <div id="head">
 
-    <a title="VirtualPBX™" href="/index.asp"><img id="logo" width="150" height="33" src="/images/main_logo.gif" alt="VirtualPBX™"></a>
+    <a title="VirtualPBX®" href="/index.asp"><img id="logo" src="/images/main_logo.gif" alt="VirtualPBX®"></a>
 
     <div id="navbox">
         <ul>
             <li><a title="VirtualPBX" href="/index.asp">Home</a></li><li><a title="Small Business PBX and Enterprise Virtual Business Phone Systems" href="/services/">Services</a>
             </li><li><a title="Strategic Marketing Partners - Global Marketing Partners" href="/partners/">Partners</a>
             </li><li><a title="Support For Virtual Phone Extensions" href="/support/">Support</a></li>
-            <li><a title="We Offer Virtual PBX™ - Broadband Phone Company - California" href="/company/">Company</a></li>
+            <li><a title="Pioneers Of The Orignial Hosted PBX" href="/company/">Company</a></li>
             <li><a title="Contact Us for Virtual Office Phone Systems, Virtual Phone Services" href="/contact.asp">Contact Us</a></li>
             <li class="pipe">|</li>
-            <li><a title="Login - Virtual PBX™: System-Administrator Web-Management Page" href="https://vconsole.VirtualPBX.com/">Login</a></li>
+            <li><a title="Login -  Virtual PBX®: System-Administrator Web-Management Page" href="https://vconsole.VirtualPBX.com/">Login</a></li>
         </ul>
     </div>
 
@@ -48,14 +48,15 @@
 
 
 
-    <p><a title="Tour" href="/tour/"><img border="0" alt="Take the Short Tour" src="/images/button/take-the-short-tour-2.gif"></a></p>
+    <p><a title="Tour" href="/tour/"><img border="0" alt="Take the Short Tour" src="/images/button/button_vpbxtour_01.gif"></a></p>
+	<p><a title="ACDQ Tour" href="/services/features/acdq-tour"><img border="0" alt="Take The ACDQ Tour" src="/images/home/button_acdqtour.gif"></a></p>
 
 
     <div id="capTop"></div>
     <ul id="navlist">
         <li id="connect">
             <span style="font-size:120%;"><strong>1.888.825.0800</strong></span><br><br>
-            <span class="details">Call toll-free or <a title="Info@VirtualPBX.com" href="mailto:Info@VirtualPBX.com">email us</a> a note we will get you up and running within two days!</span>
+            <span class="details">Call toll-free or <a title="Info@VirtualPBX.com" href="mailto:Info@VirtualPBX.com">email us</a> a note and we will get you up and running!</span>
         </li>
         <li><a title="Sign up" href="/signup.asp">Sign up</a></li>
         <li><a title="Learn more" href="/learn-more.asp">Learn more</a></li>
@@ -63,6 +64,7 @@
     </ul>
     <div id="capBottom"></div>
 
+<br>    
 
 
 </div>
@@ -74,14 +76,14 @@
 
     <h1>Privacy Policy</h1>
 
-    <p>VirtualPBX.com, Inc. respects the privacy of visitors to our site. Please read this Online Privacy Policy carefully so that you understand our privacy practices relating to information we gather through this Web site. </p>
+    <p>VirtualPBX.com, Inc.® respects the privacy of visitors to our site. Please read this Online Privacy Policy carefully so that you understand our privacy practices relating to information we gather through this Web site. </p>
 
     <h2>The Information We Collect</h2>
     <p>The information gathered by VirtualPBX.com generally falls into two categories: (1) information supplied by visitors to the site when they register or initiate transactions, and (2) tracking information gathered as visitors navigate through the VirtualPBX.com site. Third-party providers, whose sites are featured on and accessed via our site, may gather information as well.</p>
 
     <p>The information you provide us during a visit to VirtualPBX.com helps us to improve the quality and utility of our site. The more information you share with us, the better we can serve your needs.</p>
 
-    <p>When you purchase Virtual PBX™ services, we request the following types of information on our order form:</p>
+    <p>When you purchase  Virtual PBX® services, we request the following types of information on our order form:</p>
     <ul id="vpbx-list">
         <li>Name
         </li><li>Shipping and/or billing address
@@ -104,7 +106,7 @@
 
     <p>To take advantage of personalized services available on VirtualPBX.com, you may need to supply additional information, such as: </p>
     <ul>
-        <li>Virtual PBX™ Number
+        <li> Virtual PBX® Number
         </li><li>Level of responsibility for account administration
     </li></ul>
     <p>We use this data to provide you with billing information, equipment discounts, and rate plan promotions. </p>
@@ -135,7 +137,7 @@
     <h2>Changes to This Privacy Policy</h2>
     <p>This privacy policy is subject to change. The Web is an evolving medium. If we need to change our privacy policy at some point in the future, we'll post the new policy promptly. If at any point we decide to use personally identifiable information in a manner different from what was stated at the time it was collected, we will notify you and give you an opportunity to opt out of the proposed use. By using VirtualPBX.com, you agree that your visit to our site, and any dispute over privacy, is governed by the then-current version of the Online Privacy Policy. </p>
 
-    <p><em>This Online Privacy Policy was last revised on July 20, 2004.</em></p>
+    <p><em>This Online Privacy Policy was last revised on February 8, 2006.</em></p>
 
     </div>
     <!-- / Content -->
@@ -151,21 +153,21 @@
 <div id="foot">
 
     <ul id="footernav">
-        <li><a title="Virtual PBX" href="/">Home</a> |</li>
+        <li><a title="Virtual PBX®" href="/">Home</a> |</li>
         <li><a title="Small Business PBX and Enterprise Virtual Business Phone Systems" href="/services/">Services</a> |</li>
         <li><a title="Strategic Marketing Partners - Global Marketing Partners" href="/partners/">Partners</a> |</li>
         <li><a title="Support For Virtual Phone Extensions" href="/support/">Support</a> |</li>
-        <li><a title="We Offer Virtual PBX™ - Broadband Phone Company - California" href="/company/">Company</a> |</li>
+        <li><a title="Pioneers of the Original Hosted PBX" href="/company/">Company</a> |</li>
         <li><a title="Contact Us for Virtual Office Phone Systems, Virtual Phone Services" href="/contact.asp">Contact Us</a> |</li>
-        <li><a title="Login - Virtual PBX™: System-Administrator Web-Management Page" href="https://vconsole.VirtualPBX.com/">Login</a> |</li>
-        <li><a href="/sitemap.asp" title="Sitemap - Virtual PBX™ Systems">Sitemap</a> |</li>
+        <li><a title="Login -  Virtual PBX®: System-Administrator Web-Management Page" href="https://vconsole.VirtualPBX.com/">Login</a> |</li>
+        <li><a href="/sitemap.asp" title="Sitemap -  Virtual PBX® Systems">Sitemap</a> |</li>
         <li><a href="/privacy.asp" title="Privacy For a Wireless Business Phone System, Wireless PBX, and 1 800 Phone Numbers">Privacy</a> |</li>
         <li><a href="/newsletter.asp" title="Virtual Office - Small Business Phone System">Newsletter</a></li>
     </ul>
 
     <p>
-    © 1998-2004, Virtual PBX.com, Inc. All rights reserved.
-    <a style="text-decoration:none;" href="http://www.VirtualPBX.com/" title="Virtual PBX™: Phone Answering Service and PBX Phone System">Virtual PBX</a> is a trademark of Virtual PBX.com, Inc.
+    © 1998-2006, Virtual PBX.com, Inc. All rights reserved.
+    <a style="text-decoration:none;" href="http://www.VirtualPBX.com/" title="Virtual PBX®: Phone Answering Service and PBX Phone System">Virtual PBX</a> is a ® trademark of Virtual PBX.com, Inc.
     </p>
 
 </div>
